--- a/index.html
+++ b/index.html
@@ -7,38 +7,57 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Four card feature section</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-  
-  Reliable, efficient delivery
-  Powered by Technology
+  <header>
+    <div class="wrapper wrapper--narrow">
+    <h1><span class="text-light">Reliable, efficient delivery<br></span>
+      Powered by Technology</h1>
+      <p>Our Artificial Intelligence powered tools use millions of project data points
+        to ensure that your project is successful</p>
+    </div>
+  </header>
+  <main>
+    <div class="wrapper">
+      <div class="layout-grid">
+        <div class="column">
+          <div class="card card_supervisor">
+            <h2 class="card__title">Supervisor</h2>
+            <p>Monitors activity to identify project roadblocks</p>
+            <img class="card__img" src="images/icon-supervisor.svg" alt="">
+          </div>
+        </div>
+        <div class="column">
+          <div class="card card_team-builder">
+            <h2 class="card__title">Team Builder</h2>
+            <p>Scans our talent network to create the optimal team for your project</p>
+            <img class="card__img" src="images/icon-team-builder.svg" alt="">
+          </div>
+          <div class="card card_karma">
+            <h2 class="card__title">Karma</h2>
+            <p>Regularly evaluates our talent to ensure quality</p>
+            <img class="card__img" src="images/icon-karma.svg" alt="">
+          </div>
+        </div>
+        <div class="column">
+          <div class="card card_calculator">
+            <h2 class="card__title">Calculator</h2>
+            <p>Uses data from past projects to provide better delivery estimates</p>
+            <img class="card__img" src="images/icon-calculator.svg" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
 
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
-
-  Supervisor
-  Monitors activity to identify project roadblocks
-
-  Team Builder
-  Scans our talent network to create the optimal team for your project
-
-  Karma
-  Regularly evaluates our talent to ensure quality
-
-  Calculator
-  Uses data from past projects to provide better delivery estimates
-
-  
   <footer>
     <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+
     </p>
   </footer>
 </body>
